[tool.poetry]
name = "chickbwk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^1.3.4"
aiohttp = "^3.6.2"
humanize = {git = "https://github.com/jmoiron/humanize.git"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
