[project]
name = "chickenbwk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.0",
    "discord-py>=2.4.0",
    "humanize",
]

[tool.uv.sources]
humanize = { git = "https://github.com/jmoiron/humanize.git" }

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
]
